--- a/XamarinFormsRefreshViewCollectionGeo/XamarinFormsRefreshViewCollectionGeo/Views/ItemsPage.xaml
+++ b/XamarinFormsRefreshViewCollectionGeo/XamarinFormsRefreshViewCollectionGeo/Views/ItemsPage.xaml
@@ -17,7 +17,8 @@
         <Label Text="{Binding Location}" />
 
         <RefreshView IsRefreshing="{Binding IsBusy}"
-                     Command="{Binding LoadItemsCommand}">
+                     Command="{Binding LoadItemsCommand}"
+                      RefreshColor="Black">
 
             <CollectionView HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
                 <CollectionView.ItemsSource>
