use different variable for refreshing

--- a/XamarinFormsRefreshViewCollectionGeo/XamarinFormsRefreshViewCollectionGeo/Views/ItemsPage.xaml
+++ b/XamarinFormsRefreshViewCollectionGeo/XamarinFormsRefreshViewCollectionGeo/Views/ItemsPage.xaml
@@ -12,7 +12,7 @@
 
         <Label Text="{Binding Date}" />
 
-        <RefreshView IsRefreshing="{Binding IsBusy}"
+        <RefreshView IsRefreshing="{Binding IsRefreshing}"
                      Command="{Binding LoadItemsCommand}"
                       RefreshColor="Black">
 
